--- a/src/app/src/main/res/layout/activity_ui.xml
+++ b/src/app/src/main/res/layout/activity_ui.xml
@@ -24,6 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="128dp"
         android:layout_marginTop="256dp"
+        android:onClick="sendMessage"
         android:text="Submit"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
