--- a/src/app/src/main/res/layout/activity_pass_display.xml
+++ b/src/app/src/main/res/layout/activity_pass_display.xml
@@ -8,11 +8,25 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_width="302dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="452dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="40dp"
         android:text="TextView"
+        android:textAppearance="@style/TextAppearance.AppCompat"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="96dp"
+        android:layout_marginTop="32dp"
+        android:onClick="copyToClipboard"
+        android:text="Copy to Clipboard"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 </android.support.constraint.ConstraintLayout>
