--- a/src/app/src/main/res/layout/activity_pass_display.xml
+++ b/src/app/src/main/res/layout/activity_pass_display.xml
@@ -8,16 +8,20 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="302dp"
+        android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginBottom="452dp"
-        android:layout_marginStart="64dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="40dp"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.322"
+        tools:text="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa" />
 
     <Button
         android:id="@+id/button2"
